# controllers/leagues_controller.go
@@ -1,24 +1,29 @@
 package controllers
 
 import (
+	"github.com/egsam98/MegaScout/models"
 	"github.com/egsam98/MegaScout/parsers"
 	"github.com/gin-gonic/gin"
 	"strconv"
 )
 
+// @Router /leagues [get]
+// @Summary Список лиг страны за определенный сезон
+// @Param country query int true "ID страны (напр. 141)"
+// @Param season_period query int true "Период сезона (напр. 2019)"
+// @Produce json
+// @Success 200 {array} models.League
+// @Failure 400 {object} models.ErrorJSON
+// @Failure 408
 func LeaguesController(c *gin.Context) {
 	countryId, err := strconv.Atoi(c.Query("country"))
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Invalid country. Must be integer.",
-		})
+		c.JSON(400, models.NewErrorJSON("Invalid country. Must be integer."))
 		return
 	}
 	seasonPeriod, err := strconv.Atoi(c.Query("season_period"))
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Invalid season_period. Must be integer.",
-		})
+		c.JSON(400, models.NewErrorJSON("Invalid season_period. Must be integer."))
 		return
 	}
 	leagues, err := parsers.Leagues(countryId, seasonPeriod)
