# controllers/seasons_controller.go
@@ -5,6 +5,10 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Router /seasons [get]
+// @Summary Список сезонов с 1900г. по текущий
+// @Produce json
+// @Success 200 {array} models.Season
 func SeasonsController(c *gin.Context) {
 	seasons := parsers.Seasons()
 	c.Header("Content-Type", "application/json")
