# controllers/team_compositions_controller.go
@@ -1,16 +1,22 @@
 package controllers
 
 import (
+	"github.com/egsam98/MegaScout/models"
 	"github.com/egsam98/MegaScout/parsers"
 	"github.com/gin-gonic/gin"
 )
 
+// @Router /team_compositions [get]
+// @Summary Список команд и игроков в них по соревнованию (лига & сезон)
+// @Param league_url query string true "URL соревнования"
+// @Produce json
+// @Success 200 {array} models.Team
+// @Failure 400 {object} models.ErrorJSON
+// @Failure 408
 func TeamCompositionsController(c *gin.Context) {
 	leagueUrl := c.Query("league_url")
 	if len(leagueUrl) == 0 {
-		c.JSON(400, gin.H{
-			"error": "league_url is not provided",
-		})
+		c.JSON(400, models.NewErrorJSON("league_url is not provided"))
 		return
 	}
 	data, err := parsers.TeamCompositions(leagueUrl)
